# openlab-app-rest

./: Cargo.toml  Dockerfile
.github/workflows/: dockerhub.yaml
manifests/: deployment.yaml  ingress.yaml  service.yaml
src/: main.rs
