[package]
name = "openlab-rest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.7.0"
actix-web = "4.4.1"
chrono = { version = "0.4.33", features = ["serde"] }
env_logger = "0.11.2"
iso8601 = "0.6.1"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1"
strum = "0.26.1"
strum_macros = "0.26.1"
uuid = { version = "1.7.0", features = ["v4"] }
